--- a/package.json
+++ b/package.json
@@ -2,6 +2,10 @@
   "name": "uriel-website",
   "version": "0.1.0",
   "private": true,
+  "engines": {
+    "npm": "9.6.6",
+    "node": "20.2.0"
+  },
   "dependencies": {
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
