--- a/package.json
+++ b/package.json
@@ -12,7 +12,8 @@
     "@testing-library/user-event": "^13.5.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-ga": "^3.3.1",
+    "react-ga4": "^2.1.0",
+    "react-helmet-async": "^1.3.0",
     "react-router-dom": "^6.19.0",
     "react-scripts": "^5.0.1",
     "web-vitals": "^2.1.4"
